--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "date-arithmetic": "^4.1.0",
     "http-proxy-middleware": "^2.0.6",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.0",
+    "react-bootstrap": "^2.5.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.10.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
